# ionic-example-api-consumer

./: .gitignore  Makefile  README.md  pyproject.toml
data_api_demo/: demo_server.py  index.html  ionic_data_feed.py
demo/: const.py  demo_server.py  index.html  ionic_data_feed.py  messages.py
trader_api_demo/: __main__.py
