[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["pawel <pawel.rainer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
clickhouse-connect = "^0.8.18"
dotenv = "^0.9.9"
cachetools = "^6.1.0"
loguru = "^0.7.3"
gunicorn = "^23.0.0"
slowapi = "^0.1.9"
httpx = "^0.28.1"
msgspec = "^0.19.0"
websockets = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
